report comment again

--- a/report/EEC277_FinalProject.tex
+++ b/report/EEC277_FinalProject.tex
@@ -69,6 +69,8 @@ Discuss how our results will scale with 200 classifiers instead of just 4 (reall
 
 Talk about how one classifier didn't get positive values
 
+Mention putting integral in shared memory as something we should have done but didn't
+
 \section{Conclusion}
 Conclusion goes here
 
