report results update

--- a/report/EEC277_FinalProject.tex
+++ b/report/EEC277_FinalProject.tex
@@ -58,7 +58,7 @@ To extend the Viola-Jones face detection algorithm, we added a glasses classifie
 \end{figure}
 
 \section{Results}
-We ran the cascaded algorithm with three different datasets: faces, non-faces, and faces with glasses. The cascaded algorithm running on the faces dataset with 50 pictures produced a result of 49 faces detected and zero glasses detected. The same algorithm running with the non-face dataset with 50 pictures resulted in 38 faces detected and 8 glasses detected. The face detector ran on the glasses dataset with 25 pictures and found 24 face, 20 of which had glasses. Overall, the face detector has weak results with an accuracy of 92% but a false positive rate of 76%. The glasses classifier did well with an accuracy of 83.3% and a false positive rate of 21.1%. The entire cascaded face detection algorithm ran in 0.020334 seconds. The non-cascaded algorithm ran 65% slower at 0.033715 seconds. The glasses classifier ran in 0.004104 seconds.
+We ran the cascaded algorithm with three different datasets: faces, non-faces, and faces with glasses. The cascaded algorithm running on the faces dataset with 50 pictures produced a result of 49 faces detected and zero glasses detected. The same algorithm running with the non-face dataset with 50 pictures resulted in 38 faces detected and 8 glasses detected. The face detector ran on the glasses dataset with 25 pictures and found 24 face, 20 of which had glasses. Overall, the face detector has weak results with an accuracy of 92% but a false positive rate of 76%. The glasses classifier did well with an accuracy of 83.3% and a false positive rate of 21.1%. The entire cascaded face detection algorithm ran in 0.020334 seconds. The non-cascaded algorithm ran 65% slower at 0.033715 seconds. The glasses classifier ran in 0.004104 seconds. These timings are not absolute because it depends on the image and how the cascade can eliminate sub-windows early (reducing work for later stages).
 
 \section{Discussion}
 64 Threads per block, 3 kernel calls
