--- a/report/EEC277_FinalProject.tex
+++ b/report/EEC277_FinalProject.tex
@@ -76,16 +76,30 @@ Conclusion goes here
 
 % References -----------------------------------------------------------------
 \clearpage
-\large \bf {References}
+{\large \bf {References}}
 \medskip
 
 \normalsize
 \begin{itemize}
+	\item Viola, Jones: {\it Rapid Object Detection using a Boosted Cascade of Simple Feature}
+	\newline \url {http://bit.ly/wKRTl3 }
 	
-	\item EEC 277 Lectures 1+2 plus slides.
+	\item Viola, Jones: {\it Robust Real-time Object Detection}
+	\newline \url {http://bit.ly/y3dsqn }
 	
-	\item David Luebke and Greg Humphrey - How GPUs Work \newline
-	\url {http://bit.ly/hHt4VH}
+	\item Hefenbrock, Oberg, et. al. {\it Accelerating Viola-Jones Face Detection to FPGA-Level using GPUs}
+	\newline \url {http://bit.ly/xnlHjI }
+	
+	\item Patil: {\it Face Detection on GPU}
+	\newline \url {https://sites.google.com/site/facedetectionongpu/}
+	
+	\item Obukhov: {\it Face Detection with CUDA}
+	\newline \url {http://www.slideshare.net/NVIDIA/1071-gtc09}
+	
+	\item Thrust CUDA Algorithm Library
+	\newline \url {http://code.google.com/p/thrust/ }
+	
+
 
 \end{itemize}
 
